--- a/templates/index.html
+++ b/templates/index.html
@@ -15,12 +15,9 @@
 
   <link rel="stylesheet" href="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.min.css">-->
-
 </head>
 <body>
   <div id="app"></div>
-  <script src="/dist/build.js"></script>
+  <script src="{{ url_for('static', filename='js/build.js') }}"></script>
 </body>
 </html>
